[package]
name = "rankey"
version = "0.1.0"
edition = "2024"

[dependencies]
# Direct dependencies
chrono = "0.4"
der = { version = "=0.8.0-rc.9" }
der_derive = { version = "=0.8.0-rc.6" }
p384 = { version = "=0.14.0-rc.0" }
pkcs8 = { version = "=0.11.0-rc.7", features = ["pem"] }
rand = { version = "0.9" }
serde = { version = "1", features = ["derive"] }
sha1 = { version = "=0.11.0-rc.2" }
sha2 = { version = "=0.11.0-rc.2" }
snafu = "0.8"
x509-cert = { version = "=0.3.0-rc.2", features = ["builder"] }

# Explicitly lock transitive dependencies to avoid breakage from newer RC versions
block-buffer = { version = "=0.11.0-rc.5" }
crypto-bigint = { version = "=0.7.0-rc.9" }
crypto-common = { version = "=0.2.0-rc.4" }
digest = { version = "=0.11.0-rc.3" }
ecdsa = { version = "=0.17.0-rc.8" }
elliptic-curve = { version = "=0.14.0-rc.16" }
hmac = { version = "=0.13.0-rc.2" }
pem-rfc7468 = { version = "=1.0.0-rc.3" }
primefield = { version = "=0.14.0-rc.0" }
primeorder = { version = "=0.14.0-rc.0" }
rfc6979 = { version = "=0.5.0-rc.2" }
sec1 = { version = "=0.8.0-rc.10" }
signature = { version = "=3.0.0-rc.4" }
spki = { version = "=0.8.0-rc.4" }

[dev-dependencies]
base64-simd = "0.8"
