[package]
name = "rankey"
version = "0.1.1"
edition = "2024"

[features]
default = ["serde"]
serde = ["dep:serde"]

[dependencies]
der = { version = "0.8.0" }
p384 = "0.14.0-rc.7"
pkcs8 = { version = "=0.11.0-rc.11", features = ["pem"] }
rand = { version = "0.10" }
serde = { version = "1", features = ["derive"], optional = true }
sha1 = { version = "=0.11.0-rc.5" }
# sha2 is not used directly, but its `oid` feature is required to provide
# `AssociatedOid` impl for `Sha384`, which is needed by p384's ECDSA signing.
sha2 = { version = "=0.11.0-rc.5", features = ["oid"] }
snafu = "0.8"
x509-cert = { version = "=0.3.0-rc.4", features = ["builder"] }

[dev-dependencies]
base64-simd = "0.8"
